2025-12-15T02:08:04Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20218192212 # 839
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-15
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 1146 1626 / 1147 1627
* notice: next accum: outdated-unq outdated-all / unq all: 1146 1626 / 1148 1628
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-12-14]

2025-12-05T02:01:09Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19950160041 # 829
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-05
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 1145 1625 / 1146 1626
* notice: next accum: outdated-unq outdated-all / unq all: 1146 1626 / 1147 1627
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-11-18] / [2025-12-04]

2025-12-01T02:23:25Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19809147666 # 825
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-01
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 1144 1624 / 1146 1626
* notice: next accum: outdated-unq outdated-all / unq all: 1145 1625 / 1146 1626
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-11-16] / []

2025-11-27T01:55:59Z: