@@ -1,3 +1,12 @@
+2025-12-16T02:04:59Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20254001576 # 840
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-16
+* notice: last 14d: unq all: 3 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 1146 1626 / 1148 1628
+* notice: next accum: outdated-unq outdated-all / unq all: 1146 1626 / 1149 1629
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-12-15]
+
 2025-12-15T02:08:04Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20218192212 # 839
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-15
